# badgelib

./: Cargo.toml  Makefile  build.rs  changelog.md  readme.md
.github/workflows/: main.yml  pull.yml
examples/: generate.rs
src/: _width.rs  badge.rs  lib.rs  param.rs  utils.rs
