[package]
name = "badgelib"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A library for generating badges in Rust"
homepage = "https://badges.ws"
repository = "https://github.com/vladkens/badgelib"
documentation = "https://docs.rs/badgelib"
readme = "readme.md"
keywords = ["badge", "svg", "shields", "status", "readme"]
categories = ["development-tools", "graphics", "value-formatting"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { version = ">=0.8.0", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
maud = { version = "0.27.0" }
phf = { version = "0.14.0", features = ["macros"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[build-dependencies]
rayon = "1.12.0"
rusttype = "0.9.3"
